--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="credentials">
                         <div class="credential-item">
                             <i class="fas fa-graduation-cap"></i>
-                            <span>CRP: [Seu número do CRP]</span>
+                            <span>CRP: 04/80771</span>
                         </div>
                         <div class="credential-item">
                             <i class="fas fa-certificate"></i>
@@ -119,7 +119,7 @@
                             <div class="modalidade-card">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <h5>Presencial</h5>
-                                <p>Atendimento no consultório em [Sua cidade/bairro]</p>
+                                <p>Atendimento no consultório em Alfenas, Minas Gerais</p>
                             </div>
                         </div>
                     </div>
@@ -150,21 +150,21 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>seu.email@exemplo.com</p>
+                            <p>nicolascarneiro32@gmail.com</p>
                         </div>
                     </div>
                     <div class="contato-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Telefone</h4>
-                            <p>(11) 99999-9999</p>
+                            <p>(35) 98842-9102</p>
                         </div>
                     </div>
                     <div class="contato-item">
                         <i class="fas fa-clock"></i>
                         <div>
                             <h4>Horário de Atendimento</h4>
-                            <p>Segunda a Sexta: 8h às 18h</p>
+                            <p>Segunda a Sexta: 9h às 21h</p>
                         </div>
                     </div>
                 </div>
@@ -172,19 +172,19 @@
                 <div class="social-links">
                     <h4>Redes Sociais</h4>
                     <div class="social-buttons">
-                        <a href="https://wa.me/5511999999999" target="_blank" class="social-btn whatsapp">
+                        <a href="https://wa.me/5535988429102" target="_blank" class="social-btn whatsapp">
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                         </a>
-                        <a href="mailto:seu.email@exemplo.com" class="social-btn email">
+                        <a href="mailto:nicolascarneiro32@gmail.com" class="social-btn email">
                             <i class="fas fa-envelope"></i>
                             <span>Email</span>
                         </a>
-                        <a href="https://linkedin.com/in/seuperfil" target="_blank" class="social-btn linkedin">
+                        <a href="https://linkedin.com/in/nicolas-buttrós-5a512a219" target="_blank" class="social-btn linkedin">
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://instagram.com/seuperfil" target="_blank" class="social-btn instagram">
+                        <a href="https://instagram.com/psico.buttros" target="_blank" class="social-btn instagram">
                             <i class="fab fa-instagram"></i>
                             <span>Instagram</span>
                         </a>
@@ -203,8 +203,8 @@
                     <p>Transformação através do autoconhecimento</p>
                 </div>
                 <div class="footer-links">
-                    <p>&copy; 2024 [Seu Nome]. Todos os direitos reservados.</p>
-                    <p>CRP: [Seu número do CRP]</p>
+                    <p>&copy; 2025 Nicolas Buttrós Carneiro. Todos os direitos reservados.</p>
+                    <p>CRP: 04/80771</p>
                 </div>
             </div>
         </div>
