--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 </div>
             </div>
             <div class="hero-image">
-                <!-- Espaço para foto principal -->
+          <div class="hero-image">
+    <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
+</div>
+
                 <div class="image-placeholder">
                     <i class="fas fa-user-circle"></i>
                     <p>Sua Foto Profissional</p>
