--- a/index.html
+++ b/index.html
@@ -79,13 +79,10 @@
                     </div>
                 </div>
                 <div class="sobre-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-image"></i>
-                        <p>Foto Pessoal</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+         <div class="hero-image">
+    <img src="IMG_20250224-WA0010.jpg" alt="Foto do Psicólogo" class="foto-principal">
+</div>
+
     </section>
 
     <!-- Prática Section -->
