--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     </div>
                 </div>
                 <div class="sobre-image">
-         <div class="hero-image">
-    <img src="IMG_20250224-WA0010.jpg" alt="Foto do Psicólogo" class="foto-principal">
+         <div class="sobre-image">
+    <img src="IMG_20250224-WA0010.jpg" alt="sobre-image" class="sobre-image">
 </div>
 
     </section>
