--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="sobre-image">
          <div class="sobre-image">
-    <img src="IMG_20250224-WA0010.jpg" alt="sobre-image" class="sobre-image">
+    <img src="IMG-20250224-WA0010.jpg" alt="sobre-image" class="sobre-image">
 </div>
 
     </section>
