--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 </div>
             </div>
             <div class="hero-image">
-          <div class="hero-image">
     <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
 </div>
 
@@ -79,8 +78,7 @@
                     </div>
                 </div>
                 <div class="sobre-image">
-         <div class="sobre-image">
-    <img src="IMG-20250224-WA0010.jpg" alt="sobre-image" class="sobre-image">
+    <img src="IMG-20250224-WA0010.jpg" alt="sobre-image" class="foto-sobre">
 </div>
 
     </section>
