--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     <a href="#contato" class="btn-primary">Agendar Consulta</a>
                     <a href="#sobre" class="btn-secondary">Saiba Mais</a>
                 </div>
-            </div>
             <div class="hero-image">
     <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
 </div>
@@ -75,10 +74,8 @@
                             <i class="fas fa-certificate"></i>
                             <span>Especialização em Psicologia Analítica</span>
                         </div>
-                    </div>
-                </div>
                 <div class="sobre-image">
-    <img src="IMG-20250224-WA0010.jpg" alt="sobre-image" class="foto-sobre">
+    <img src="IMG-20250224-WA0010.jpg" alt="foto de apresentação" class="foto-sobre">
 </div>
 
     </section>
