--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </div>
             <div class="hero-image">
     <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
+    </div>
 </div>
-
     </section>
 
     <!-- Sobre Section -->
@@ -76,9 +76,10 @@
                         </div>
                 <div class="sobre-image">
     <img src="IMG-20250224-WA0010.jpg" alt="foto de apresentação" class="foto-sobre">
-</div>
-
-    </section>
+ </div>
+        </div> <!-- fecha sobre-content -->
+    </div>
+</section>
 
     <!-- Prática Section -->
     <section id="pratica" class="pratica">
