--- a/index.html
+++ b/index.html
@@ -31,23 +31,22 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-container">
-            <div class="hero-content">
-                <h1 class="hero-title">Jornada de Autoconhecimento</h1>
-                <p class="hero-subtitle">Psicoterapia Junguiana para transformação pessoal e crescimento interior</p>
-                <div class="hero-badges">
-                    <span class="badge">Atendimento Online</span>
-                    <span class="badge">Presencial</span>
-                </div>
-                <div class="hero-cta">
-                    <a href="#contato" class="btn-primary">Agendar Consulta</a>
-                    <a href="#sobre" class="btn-secondary">Saiba Mais</a>
-                </div>
-            <div class="hero-image">
-    <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
+ <div class="hero-content">
+    <h1 class="hero-title">Jornada de Autoconhecimento</h1>
+    <p class="hero-subtitle">Psicoterapia Junguiana para transformação pessoal e crescimento interior</p>
+    <div class="hero-badges">
+        <span class="badge">Atendimento Online</span>
+        <span class="badge">Presencial</span>
     </div>
+    <div class="hero-cta">
+        <a href="#contato" class="btn-primary">Agendar Consulta</a>
+        <a href="#sobre" class="btn-secondary">Saiba Mais</a>
+    </div>
+</div> <!-- ✅ fechamento que faltava -->
+<div class="hero-image">
+    <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
 </div>
+
     </section>
 
     <!-- Sobre Section -->
@@ -65,21 +64,20 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
-                    <div class="credentials">
-                        <div class="credential-item">
-                            <i class="fas fa-graduation-cap"></i>
-                            <span>CRP: 04/80771</span>
-                        </div>
-                        <div class="credential-item">
-                            <i class="fas fa-certificate"></i>
-                            <span>Especialização em Psicologia Analítica</span>
-                        </div>
-                <div class="sobre-image">
-    <img src="IMG-20250224-WA0010.jpg" alt="foto de apresentação" class="foto-sobre">
- </div>
-        </div> <!-- fecha sobre-content -->
+                <div class="credentials">
+    <div class="credential-item">
+        <i class="fas fa-graduation-cap"></i>
+        <span>CRP: 04/80771</span>
     </div>
-</section>
+    <div class="credential-item">
+        <i class="fas fa-certificate"></i>
+        <span>Especialização em Psicologia Analítica</span>
+    </div>
+</div> <!-- ✅ fechamento que faltava -->
+</div> <!-- ✅ fecha o sobre-text -->
+<div class="sobre-image">
+    <img src="IMG-20250224-WA0010.jpg" alt="foto de apresentação" class="foto-sobre">
+</div>
 
     <!-- Prática Section -->
     <section id="pratica" class="pratica">
