--- a/index.html
+++ b/index.html
@@ -31,22 +31,28 @@
     </header>
 
     <!-- Hero Section -->
- <div class="hero-content">
-    <h1 class="hero-title">Jornada de Autoconhecimento</h1>
-    <p class="hero-subtitle">Psicoterapia Junguiana para transformação pessoal e crescimento interior</p>
-    <div class="hero-badges">
-        <span class="badge">Atendimento Online</span>
-        <span class="badge">Presencial</span>
-    </div>
-    <div class="hero-cta">
-        <a href="#contato" class="btn-primary">Agendar Consulta</a>
-        <a href="#sobre" class="btn-secondary">Saiba Mais</a>
-    </div>
-</div> <!-- ✅ fechamento que faltava -->
-<div class="hero-image">
-    <img src="IMG_20250901_042045_392.jpg" alt="Foto do Psicólogo" class="foto-principal">
-</div>
-
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title">Jornada de Autoconhecimento</h1>
+                <p class="hero-subtitle">Psicoterapia Junguiana para transformação pessoal e crescimento interior</p>
+                <div class="hero-badges">
+                    <span class="badge">Atendimento Online</span>
+                    <span class="badge">Presencial</span>
+                </div>
+                <div class="hero-cta">
+                    <a href="#contato" class="btn-primary">Agendar Consulta</a>
+                    <a href="#sobre" class="btn-secondary">Saiba Mais</a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <!-- Espaço para foto principal -->
+                <div class="image-placeholder">
+                    <i class="fas fa-user-circle"></i>
+                    <p>Sua Foto Profissional</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Sobre Section -->
@@ -62,22 +68,28 @@
                         [Espaço para sua apresentação pessoal - fale sobre sua formação, experiência e abordagem junguiana]
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                       aaaaaaaaaaaa
                     </p>
-                <div class="credentials">
-    <div class="credential-item">
-        <i class="fas fa-graduation-cap"></i>
-        <span>CRP: 04/80771</span>
-    </div>
-    <div class="credential-item">
-        <i class="fas fa-certificate"></i>
-        <span>Especialização em Psicologia Analítica</span>
-    </div>
-</div> <!-- ✅ fechamento que faltava -->
-</div> <!-- ✅ fecha o sobre-text -->
-<div class="sobre-image">
-    <img src="IMG-20250224-WA0010.jpg" alt="foto de apresentação" class="foto-sobre">
-</div>
+                    <div class="credentials">
+                        <div class="credential-item">
+                            <i class="fas fa-graduation-cap"></i>
+                            <span>CRP: [Seu número do CRP]</span>
+                        </div>
+                        <div class="credential-item">
+                            <i class="fas fa-certificate"></i>
+                            <span>Especialização em Psicologia Analítica</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="sobre-image">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Foto Pessoal</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Prática Section -->
     <section id="pratica" class="pratica">
