--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image">
                 <!-- Espaço para foto principal -->
-                <div class="image-placeholder">
+                <div class="<img src="IMG_20250901_042045_392.jpeg" alt="Foto principal">">
                     <i class="fas fa-user-circle"></i>
                     <p>Sua Foto Profissional</p>
                 </div>
