--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="sobre-image">
-                    <div class="image-placeholder">
+                    <div class="<img src="IMG-20250224-WA0010.jpg" alt="Foto secundária">">
                         <i class="fas fa-image"></i>
                         <p>Foto Pessoal</p>
                     </div>
