--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image">
                 <!-- Espaço para foto principal -->
-                <div class="<img src="IMG_20250901_042045_392.jpeg" alt="Foto principal">
+                <img src="IMG_20250901_042045_392.jpeg" alt="Foto principal">
                     <i class="fas fa-user-circle"></i>
                     <p>Sua Foto Profissional</p>
                 </div>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="sobre-image">
-                    <div class="<img src="IMG-20250224-WA0010.jpg" alt="Foto secundária">
+                    <img src="IMG-20250224-WA0010.jpg" alt="Foto secundária">
                         <i class="fas fa-image"></i>
                         <p>Foto Pessoal</p>
                     </div>
