--- a/index.html
+++ b/index.html
@@ -69,16 +69,20 @@
                         [Espaço para sua apresentação pessoal - fale sobre sua formação, experiência e abordagem junguiana]
                     </p>
                     <p>
-                       aaaaaaaaaaaa
+                       Sou psicólogo clínico fundamentado na psicologia analítica junguiana, abordagem que considera os símbolos, os sonhos e a imaginação como expressões importantes da vida psíquica. Ao longo da minha trajetória, percebi que meus interesses em cinema, literatura, filosofia, história e música não são apenas hobbies, mas também ferramentas que ampliam meu olhar sobre a experiência humana. Essas referências me ajudam a compreender com mais riqueza os diferentes modos como as pessoas dão sentido às suas vidas e atravessam seus desafios.
+
+No consultório, busco criar um espaço seguro, ético e acolhedor, em que seja possível o fortalecimento de um vínculo verdadeiro entre paciente e terapeuta. Acredito que a escuta atenta e respeitosa abre caminhos para que cada pessoa possa entrar em contato com seus próprios conteúdos internos e, assim, elaborar novas formas de estar no mundo. Meu compromisso é oferecer um ambiente que favoreça o autoconhecimento, o diálogo e a possibilidade de transformação, respeitando sempre o tempo e a singularidade de cada processo.
+
+Se você deseja compreender melhor quem é, aprofundar-se em sua própria história ou encontrar novos recursos para lidar com as demandas da vida, estarei à disposição para caminhar ao seu lado nesse percurso.
                     </p>
                     <div class="credentials">
                         <div class="credential-item">
                             <i class="fas fa-graduation-cap"></i>
-                            <span>CRP: [Seu número do CRP]</span>
+                            <span>CRP: 04/80771 </span>
                         </div>
                         <div class="credential-item">
                             <i class="fas fa-certificate"></i>
-                            <span>Especialização em Psicologia Analítica</span>
+                            <span>Psicologia Analítica Junguiana</span>
                         </div>
                     </div>
                 </div>
@@ -104,10 +108,14 @@
                 <div class="pratica-info">
                     <h3>Como Funciona</h3>
                     <p>
-                        [Espaço para explicar sua abordagem terapêutica, metodologia e como são as sessões]
+                        De modo geral, Os atendimentos acontecem em sessões semanais, com duração aproximada de 50 minutos. Esse espaço é reservado para que você possa falar livremente sobre seus sentimentos, pensamentos, sonhos e experiências. O ritmo e o foco do processo são construídos juntos, respeitando seu tempo, suas necessidades e seus objetivos.
+
+A psicoterapia é um processo gradual, que se desenvolve no diálogo constante entre paciente e terapeuta. Não se trata de oferecer respostas prontas, mas de favorecer a reflexão, o autoconhecimento e a construção de novos caminhos diante dos desafios da vida.
                     </p>
                     <p>
-                        A psicoterapia junguiana busca o desenvolvimento da personalidade através do processo de individuação, integrando aspectos conscientes e inconscientes da psique.
+                        Na abordagem junguiana, cada pessoa é vista como um ser em constante desenvolvimento, em busca de se tornar quem realmente é — um processo chamado individuação. Durante os atendimentos, aspectos conscientes e inconscientes são trabalhados, considerando não apenas as dificuldades imediatas, mas também os símbolos, imagens e sonhos que surgem no percurso.
+
+Os atendimentos não se limitam a resolver problemas pontuais: eles convidam a um mergulho mais profundo, ajudando a integrar diferentes partes da psique, encontrar novos significados e cultivar uma relação mais autêntica consigo mesmo e com o mundo.
                     </p>
                     
                     <div class="modalidades">
