--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
             <div class="sobre-content">
                 <div class="sobre-text">
                     <p class="intro-text">
-                        [Espaço para sua apresentação pessoal - fale sobre sua formação, experiência e abordagem junguiana]
-                    </p>
+                
                     <p>
                        Sou psicólogo clínico fundamentado na psicologia analítica junguiana, abordagem que considera os símbolos, os sonhos e a imaginação como expressões importantes da vida psíquica. Ao longo da minha trajetória, percebi que meus interesses em cinema, literatura, filosofia, história e música não são apenas hobbies, mas também ferramentas que ampliam meu olhar sobre a experiência humana. Essas referências me ajudam a compreender com mais riqueza os diferentes modos como as pessoas dão sentido às suas vidas e atravessam seus desafios.
 
-No consultório, busco criar um espaço seguro, ético e acolhedor, em que seja possível o fortalecimento de um vínculo verdadeiro entre paciente e terapeuta. Acredito que a escuta atenta e respeitosa abre caminhos para que cada pessoa possa entrar em contato com seus próprios conteúdos internos e, assim, elaborar novas formas de estar no mundo. Meu compromisso é oferecer um ambiente que favoreça o autoconhecimento, o diálogo e a possibilidade de transformação, respeitando sempre o tempo e a singularidade de cada processo.
+No consultório, busco criar um espaço seguro, ético e acolhedor, em que seja possível o fortalecimento de um vínculo verdadeiro entre paciente e terapeuta. 
+                         </p>
+                    <p>
+                        Acredito que a escuta atenta e respeitosa abre caminhos para que cada pessoa possa entrar em contato com seus próprios conteúdos internos e, assim, elaborar novas formas de estar no mundo. Meu compromisso é oferecer um ambiente que favoreça o autoconhecimento, o diálogo e a possibilidade de transformação, respeitando sempre o tempo e a singularidade de cada processo.
 
 Se você deseja compreender melhor quem é, aprofundar-se em sua própria história ou encontrar novos recursos para lidar com as demandas da vida, estarei à disposição para caminhar ao seu lado nesse percurso.
                     </p>
@@ -108,7 +110,7 @@ Se você deseja compreender melhor quem é, aprofundar-se em sua própria histó
                 <div class="pratica-info">
                     <h3>Como Funciona</h3>
                     <p>
-                        De modo geral, Os atendimentos acontecem em sessões semanais, com duração aproximada de 50 minutos. Esse espaço é reservado para que você possa falar livremente sobre seus sentimentos, pensamentos, sonhos e experiências. O ritmo e o foco do processo são construídos juntos, respeitando seu tempo, suas necessidades e seus objetivos.
+                        De modo geral, os atendimentos acontecem em sessões semanais, com duração aproximada de 50 minutos. Esse espaço é reservado para que você possa falar livremente sobre seus sentimentos, pensamentos, sonhos e experiências. O ritmo e o foco do processo são construídos juntos, respeitando seu tempo, suas necessidades e seus objetivos.
 
 A psicoterapia é um processo gradual, que se desenvolve no diálogo constante entre paciente e terapeuta. Não se trata de oferecer respostas prontas, mas de favorecer a reflexão, o autoconhecimento e a construção de novos caminhos diante dos desafios da vida.
                     </p>
