--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             </div>
             <div class="hero-image">
                 <!-- Espaço para foto principal -->
-                <img src="IMG_20250901_042045_392.jpeg" alt="Foto principal">
-                
+                <img src="IMG_20250901_042045_392.jpeg" alt="Foto principal" onerror="this.style.display='none'">
                     <i class="fas fa-user-circle"></i>
                     <p>Sua Foto Profissional</p>
                 </div>
