--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#sobre" class="btn-secondary">Saiba Mais</a>
                 </div>
             </div>
-            <div class="hero-image">
+            <div class="hero-image" image-placeholder>
                 <!-- Espaço para foto principal -->
                 <img src="IMG_20250901_042045_392.jpeg" alt="Foto principal" onerror="this.style.display='none'">
                     <i class="fas fa-user-circle"></i>
@@ -87,7 +87,7 @@ Se você deseja compreender melhor quem é, aprofundar-se em sua própria histó
                         </div>
                     </div>
                 </div>
-                <div class="sobre-image">
+                <div class="sobre-image" image-placeholder>
                     <img src="IMG-20250224-WA0010.jpg" alt="Foto secundária">
                     
                         <i class="fas fa-image"></i>
