--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image>
                 <!-- Espaço para foto principal -->
-                <img src="IMG_20250901_042045_392.jpeg" alt="Foto principal">
+                <img src="IMG-20250416-WA003j6-EDIT.JPG" alt="Foto principal">
                 </div>
             </div>
         </div>
