--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <a href="#sobre" class="btn-secondary">Saiba Mais</a>
                 </div>
             </div>
-            <div class="hero-image>
-                <!-- Espaço para foto principal -->
-                <img src="IMG-20250416-WA003j6-EDIT.JPG" alt="Foto principal">
-                </div>
+            <div class="hero-image">
+    <img src="IMG-20250416-WA003j6-EDIT.JPG" alt="Foto principal" class="hero-photo">
+</div>
+
             </div>
         </div>
     </section>
